src/app.scss
/* app css stylesheet */

@import '../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap';
@import './vendor/_bootswatch';
@import './vendor/_variables';
@import './vendor/angular-xeditable-0.1.8/css/xeditable';
@import './components/templates/model';

[ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
  display: none !important;
}

body {
  padding: 10px;
}

ul.nav {
  margin-right: 0;
  padding: 9px;
  > li {
    padding-right: 10px;
  }
}

.modal-content {
  padding: 10px;
}

.iow-panel {
  @extend .panel;
  @extend .panel-default;
  overflow: hidden;
}

.frontpage-panel {
  @extend .iow-panel;
  width: 50%;
}

.frontpage-panel__body {
  @extend .panel-body;
  padding: 0;
}

.panel__list {
  list-style: none;
  padding: 0;
  margin: 0;
}

.frontpage-panel__list__item {
  padding: 7px 15px 7px 15px;
}

.frontpage-panel__list__item:hover {
  background-color: $list-group-hover-bg;
}

a.accordion-toggle {
  display: block;
}

// fix weird ui-bootstrap bug
.panel-collapse.in {
  height: auto !important;
}

